--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Structure tags</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,100&family=Oswald:wght@200&display=swap" rel="stylesheet">
 </head>
-<body>
-  <h2>ОБ ОТДЫХЕ</h2>
+<body style="font-family:'Montserrat', sans-serif;">
+  <h2 style="font-family:'Oswald', sans-serif;">ОБ ОТДЫХЕ</h2>
   <section>
 	  <img src="image1.jpg">
 	  <h1>На островах</h1>
